package protobuf_unittest;

// Protos optimized for SPEED use a strict superset of the generated code
// of equivalent ones optimized for CODE_SIZE, so we should optimize all our
// tests for speed unless explicitly testing code size optimization.
option optimize_for = SPEED;
option java_multiple_files = true;
option java_outer_classname = "Container";

message FirstData {
    required string id = 1;
    optional string rev = 2;
    optional string data = 3;
}

message SecondData {
    required string id = 1;
    optional string rev = 2;
    optional string data = 3;
}